--- a/Frontend/src/Navbar.css
+++ b/Frontend/src/Navbar.css
@@ -139,7 +139,7 @@
   padding: 0.5rem 0.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 100;
-  width: 100vw;
+  width: 98.9%;
 }
 
 .navbar-container {
